--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "dashboard",
-  "version": "1.0.0",
-  "description": "dashboard for inbox-engine",
-  "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/riderrocks/inbox-engine-dashboard.git"
-  },
-  "author": "riderrocks",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/riderrocks/inbox-engine-dashboard/issues"
-  },
-  "homepage": "https://github.com/riderrocks/inbox-engine-dashboard#readme",
-  "dependencies": {
-    "angular-bootstrap-datetimepicker": "^1.1.3",
-    "angular-date-time-input": "^1.2.1"
-  }
+    "name": "dashboard",
+    "version": "1.0.0",
+    "description": "dashboard for inbox-engine",
+    "main": "index.html",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/riderrocks/inbox-engine-dashboard.git"
+    },
+    "author": "riderrocks",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/riderrocks/inbox-engine-dashboard/issues"
+    },
+    "homepage": "https://github.com/riderrocks/inbox-engine-dashboard#readme",
+    "dependencies": {
+        "angular-bootstrap-datetimepicker": "^1.1.3",
+        "angular-date-time-input": "^1.2.1",
+    }
 }
