--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "homepage": "https://github.com/riderrocks/inbox-engine-dashboard#readme",
     "dependencies": {
         "angular-bootstrap-datetimepicker": "^1.1.3",
-        "angular-date-time-input": "^1.2.1",
+        "angular-date-time-input": "^1.2.1"
     }
 }
