--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,11 @@
     "angular-route": "~1.4.9",
     "sweetalert": "~1.1.3",
     "please-wait": "~0.0.5",
-    "bootstrap": "v3.3.7"
+    "bootstrap": "v3.3.7",
+    "angular-resource": "^1.6.1",
+    "ngstorage": "^0.3.11"
+  },
+  "resolutions": {
+    "angular": "1.4.9"
   }
 }
